--- a/libs/posts/src/lib/post-list/post-list.component.html
+++ b/libs/posts/src/lib/post-list/post-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h4>Post lists</h4>
   <div class="card-container">
-    <app-post-card  *ngFor="let post of posts | async" [post]="post">
+    <app-post-card  *ngFor="let post of posts | async; let i = index;" [post]="post" (selected)="select(i)">
     </app-post-card>
   </div>
 </div>
