--- a/libs/posts/src/lib/post-list/post-list.component.scss
+++ b/libs/posts/src/lib/post-list/post-list.component.scss
@@ -1,8 +1,11 @@
 .card-container{
   display: grid;
-  grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px ;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
   grid-column-gap: 1em;
-  grid-template-rows:  50px 50px 50px 50px 50px 50px 50px 50px 50px 50px ;
+  grid-template-rows:  1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
   row-gap: 1em;
   margin-bottom: 2em;
+  app-post-card {
+    aspect-ratio: 1;
+  }
 }
