--- a/libs/posts/src/lib/shared/post-card/post-card.component.scss
+++ b/libs/posts/src/lib/shared/post-card/post-card.component.scss
@@ -1,13 +1,10 @@
-
-.square{
+.square {
   color: white;
-  width: 50px;
-  height: 50px;
+  height: 100%;
   text-align: center;
   font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-
 }
